small dark mode fixes

--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -61,7 +61,7 @@
     cursor:pointer;
     position:relative;
     color:var(--text);
-    border:2px solid black;
+    border:2px solid var(--text);
     border-radius:15px;
     padding-left:8px;
     padding-right:8px;
